# litetemp-rag-finance

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default.yaml  finance_sources.yaml
docs/: design.md
scripts/: build_index.py  run_benchmark.py  update_index.py
src/litetemp_rag_finance/: __init__.py  content_hash.py  schema.py
src/litetemp_rag_finance/cold_tier/: delta_writer.py  parquet_store.py
src/litetemp_rag_finance/evaluation/: metrics.py  qa_pairs.py
src/litetemp_rag_finance/generation/: temporal_llm.py
src/litetemp_rag_finance/hot_tier/: faiss_index.py  metadata_db.py
src/litetemp_rag_finance/ingestion/: chunker.py  document_loader.py  pipeline.py
src/litetemp_rag_finance/query/: as_of.py  between.py  latest.py
src/litetemp_rag_finance/retrievers/: baseline_dpr.py  date_as_token.py  time_fusion.py
tests/: test_content_hash.py  test_evaluation.py  test_ingestion.py  test_query.py  test_retrievers.py  test_schema.py
