[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litetemp-rag-finance"
version = "0.1.0"
description = "Lightweight dual-tier temporal RAG for policy statements and regulatory guidance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2",
    "datasets>=2.14",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "tqdm>=4.65",
    "jsonlines>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
]
eval = [
    "evaluate>=0.4",
    "bert-score>=0.3",
]
delta = [
    "deltalake>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["litetemp_rag_finance*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
